tests/e2e/fail/slice_assignment.ep
# COMPILE_ERROR: Invalid assignment target
fun main(): void {
    let values = new i64[3]
    values[0:1] = values[1:2]
}
